--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,292 +1,392 @@
-*{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   scroll-behavior: smooth;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 /* Navbar */
-.navbar{
-   background: rgb(137, 216, 199);
-   position: sticky;
-   top: 0;
-   height: 60px;
-   width: 100%;
-   display: flex;
-   align-items: center;
-   z-index: 1;
+.navbar {
+  background: rgb(137, 216, 199);
+  position: sticky;
+  top: 0;
+  height: 60px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  z-index: 1;
 }
 
-.navbar-center{
-   width: 100%;
-   max-width: 1170px;
-   margin: 0 auto;
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   padding: 0 1.5rem;
+.navbar-center {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1.5rem;
 }
-.nav-icon{
-   font-size: 1.5rem;
+.nav-icon {
+  font-size: 1.5rem;
 }
-.nav-icon .logo_nav{
-   width: 40%;
+.nav-icon .logo_nav {
+  width: 40%;
 }
-.cart-btn{
-   position: relative;
-   cursor: pointer;
+.cart-btn {
+  position: relative;
+  cursor: pointer;
 }
 
-.cart-items{
-   position: absolute;
-   top: -8px;
-   right: -8px;
-   background: cadetblue;
-   padding: 0 5px;
-   border-radius: 30%;
-   color: aliceblue;
+.cart-items {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: cadetblue;
+  padding: 0 5px;
+  border-radius: 30%;
+  color: aliceblue;
 }
 
 /* inicio web */
 
-.inicio{
-   min-height: calc(100vh - 60px);
-   background: url('../img/fondo-index.png');
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+.inicio {
+  min-height: calc(100vh - 60px);
+  background: url("../img/fondo-index.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.banner{
-   text-align: center;
-   background: rgba(255,255,255,0.8);
-   display: inline-block;
-   padding: 2rem 4rem;
+.banner {
+  text-align: center;
+  background: rgba(255, 255, 255, 0.8);
+  display: inline-block;
+  padding: 2rem 4rem;
 }
-.banner-title{
-   font-size: 3.4rem;
-   text-transform: uppercase;
-   letter-spacing: 0.1rem;
-   margin-bottom: 3rem;
+.banner-title {
+  font-size: 3.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  margin-bottom: 3rem;
 }
-.banner-btn{
-   padding: 1rem 3rem;
-   background-color:orange;
-   border: 1px solid orange;
-   transition: all 0.3s linear;
-   cursor: pointer;
-   
+.banner-btn {
+  padding: 1rem 3rem;
+  background-color: orange;
+  border: 1px solid orange;
+  transition: all 0.3s linear;
+  cursor: pointer;
 }
-.banner-btn a{
-   text-transform: uppercase;
-   letter-spacing: 0.1rem;
-   font-size: 1rem;
-   text-decoration: none;
-   color: #000;
+.banner-btn a {
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-size: 1rem;
+  text-decoration: none;
+  color: #000;
 }
-.banner-btn:hover{
-   background: transparent;
+.banner-btn:hover {
+  background: transparent;
 }
-
-
 
 /* Card Productos */
 
-.productos{
-   padding: 4rem 0;
+.productos {
+  padding: 4rem 0;
 }
-.titulo-prod h2{
-   text-align: center;
-   font-size: 2.5rem;
-   margin-bottom: 5rem;
-   text-transform: capitalize;
-   letter-spacing: 0.1rem;
-}
-
-.card-prod{
-   width: 90vw;
-   margin: 0 auto;
-   max-width: 1170px;
-   display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-   column-gap: 1.5rem;
-   row-gap: 2rem;
+.titulo-prod h2 {
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 5rem;
+  text-transform: capitalize;
+  letter-spacing: 0.1rem;
 }
 
-.img-contenedor{
-   position: relative;
-   overflow: hidden;
+.card-prod {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  column-gap: 1.5rem;
+  row-gap: 2rem;
 }
 
-.bag-btn{
-   position: absolute;
-   top: 70%;
-   right: 0;
-   background: orange;
-   border: none;
-   padding: 0.5rem 0.75rem;
-   font-weight: bold;
-   transition: all 0.3s linear;
-   transform: translateX(101%);
-   cursor: pointer;
+.img-contenedor {
+  position: relative;
+  overflow: hidden;
 }
 
-.bag-btn:hover{
-   color: #fff;
+.bag-btn {
+  position: absolute;
+  top: 70%;
+  right: 0;
+  background: orange;
+  border: none;
+  padding: 0.5rem 0.75rem;
+  font-weight: bold;
+  transition: all 0.3s linear;
+  transform: translateX(101%);
+  cursor: pointer;
 }
 
-.fa-shopping-cart{
-   margin-right: 0.5rem;
-}
-.img-contenedor:hover .bag-btn{
-   transform: translateX(0);
+.bag-btn:hover {
+  color: #fff;
 }
 
-.prod-img{
-   display: block;
-   width: 100%;
-   min-height: 12rem;
-   transition: all 0.3s linear;
+.fa-shopping-cart,
+.fa-hand-holding-dollar {
+  margin-right: 0.5rem;
 }
-.img-contenedor:hover .prod-img{
-   opacity: 0.5;
+.img-contenedor:hover .bag-btn {
+  transform: translateX(0);
 }
 
-.prod h3{
-   text-transform: capitalize;
-   font-size: 1.1rem;
-   margin-top: 1rem;
-   letter-spacing: 0.1rem;
-   text-align: center;
+.prod-img {
+  display: block;
+  width: 100%;
+  min-height: 12rem;
+  transition: all 0.3s linear;
+}
+.img-contenedor:hover .prod-img {
+  opacity: 0.5;
 }
 
-.prod h4{
-   margin-top: 0.7rem;
-   letter-spacing: 0.1rem;
-   color: orange;
-   text-align: center;
+.prod h3 {
+  text-transform: capitalize;
+  font-size: 1.1rem;
+  margin-top: 1rem;
+  letter-spacing: 0.1rem;
+  text-align: center;
+}
+
+.prod h4 {
+  margin-top: 0.7rem;
+  letter-spacing: 0.1rem;
+  color: orange;
+  text-align: center;
 }
 
 /* Carrito */
-.bloque-carrito{
-   position: fixed;
-   top: 0;
-   right: 0;
-   width: 100%;
-   height: 100%;
-   background: transparent;
-   transition: all 0.3s linear;
-   background: rgb(240,157,80,0.5);
-   z-index: 2;
-   visibility: hidden;
+.bloque-carrito {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  transition: all 0.3s linear;
+  background: rgb(240, 157, 80, 0.5);
+  z-index: 2;
+  visibility: hidden;
 }
 
-.carrito{
-   position: fixed;
-   top: 0;
-   right: 0;
-   width: 100%;
-   height: 100%;
-   overflow: scroll;
-   background: #fff;
-   z-index: 3;
-   background: rgb(231,226,221);
-   padding: 1.5rem;
-   transition: all 0.3s linear;
-   transform: translateX(100%);
+.carrito {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  background: #fff;
+  z-index: 3;
+  background: rgb(231, 226, 221);
+  padding: 1.5rem;
+  transition: all 0.3s linear;
+  transform: translateX(100%);
 }
-.showCart{
-   transform: translateX(0);
+.showCart {
+  transform: translateX(0);
 }
-.transparenteBcg{
-   visibility: visible;
-}
-
-@media screen and (min-width:768px){
-   .carrito{
-      width: 30vw;
-      min-width: 450px;
-   }
+.transparenteBcg {
+  visibility: visible;
 }
 
-.fin-carrito{
-   font-size: 1.7rem;
-   cursor: pointer;
-}
-.carrito h2{
-   text-transform: capitalize;
-   text-align: center;
-   margin-bottom: 2rem;
+@media screen and (min-width: 768px) {
+  .carrito {
+    width: 30vw;
+    min-width: 450px;
+  }
 }
 
-.carrito-item{
-   display: grid;
-   align-items: center;
-   grid-template-columns: auto 1fr auto;
-   column-gap: 1.5rem;
-   margin: 1.5rem 0;
+.fin-carrito {
+  font-size: 1.7rem;
+  cursor: pointer;
 }
-.carrito-item img{
-   width: 75px;
-   height: 75px;
-}
-.carrito-item h4{
-   font-size: 0.85rem;
-   text-transform: capitalize;
+.carrito h2 {
+  text-transform: capitalize;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
-.carrito-item h5{
-   margin: 0.5rem 0;
+.carrito-item {
+  display: grid;
+  align-items: center;
+  grid-template-columns: auto 1fr auto;
+  column-gap: 1.5rem;
+  margin: 1.5rem 0;
 }
-.cant-item{
-   text-align: center;
+.carrito-item img {
+  width: 75px;
+  height: 75px;
 }
-.remove-item{
-   color: gray;
-   cursor: pointer;
+.carrito-item h4 {
+  font-size: 0.85rem;
+  text-transform: capitalize;
 }
-.remove-item:hover{
-   background: red;
-   color: #000;
-   padding: 3px;
-   border-radius: 5px;
+
+.carrito-item h5 {
+  margin: 0.5rem 0;
 }
-.fa-chevron-up, .fa-chevron-down{
-   color: orange;
-   cursor: pointer;
+.cant-item {
+  text-align: center;
+}
+.remove-item {
+  color: gray;
+  cursor: pointer;
+}
+.remove-item:hover {
+  background: red;
+  color: #000;
+  padding: 3px;
+  border-radius: 5px;
+}
+.fa-chevron-up,
+.fa-chevron-down {
+  color: orange;
+  cursor: pointer;
 }
 
 /* footer cart */
-.carrito-footer{
-   margin-top: 2rem;
-   text-align: center;
+.carrito-footer {
+  margin-top: 2rem;
+  text-align: center;
 }
-.carrito-footer h3{
-   text-transform: capitalize;
-   margin-bottom: 1rem;
+.carrito-footer h3 {
+  text-transform: capitalize;
+  margin-bottom: 1rem;
 }
-footer p{
-   background-color: #000;
-   color: #fff;
-   font-size: 1.1rem;
-   text-align: center;
-   padding: 5px 0;
+footer p {
+  background-color: #000;
+  color: #fff;
+  font-size: 1.1rem;
+  text-align: center;
+  padding: 5px 0;
 }
 
 /* Filtro */
-.filter{
-   width: 100%;
-   text-align: center;
-   position: absolute;
-   top:120%
+.filter {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 120%;
 }
-.grid{
-   padding: 15px 0;
+.grid {
+  padding: 15px 0;
 }
-#category{
-   width: 30vw;
-   height: 25px;
-   text-align: center;
+#category {
+  width: 30vw;
+  height: 25px;
+  text-align: center;
+}
+.oculto {
+  display: none;
+}
+h2{
+  font-size: 3rem;
+  text-align: center;
+  padding: 15px 0;
+}
+.titulo-detalle{
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+.tabla{
+  width: 100%;
+   border: #000 1px solid;
+   padding: 10px 0;
+}
+
+.detalleCompra {
+  margin-bottom: 10px;
+  display: grid;
+  align-items: center;
+  text-align: center;
+  grid-template-columns: repeat(6, 1fr);
+}
+
+.producto img{
+   width: 60px;
+}
+
+.footer-detalle{
+  display: flex;
+  width: 100%;
+  flex-flow: row wrap;
+  align-items: center;
+  /* justify-content: space-between; */
+  border: #000 1px solid;
+
+}
+.seguirComprando{
+  width: 15%;
+  justify-content: center;
+  text-align: center;
+  /* margin-right: 15px; */
+  /* border: #000 1px solid; */
+}
+.btn-detalle{
+  width: 75%;
+  padding: 5px;
+  display: inline;
+}
+
+.medioPago{
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* border: #000 1px solid; */
+  margin: 0 15px;
+}
+
+.tipoPago {
+  width: 35%;
+  padding: 5px 10px;
+  border-left: #000 1px solid;
+  border-right: #000 1px solid;
+  /* border: #000 1px solid; */
+}
+.tipoPago div {
+  padding: 5px;
+}
+.mjsDescuento{
+  width: 75%;
+  padding: 10px;
+  text-align: center;
+  /* border: #000 1px solid; */
+}
+
+.resumen{
+  width: 31%;
+  display: flex;
+  flex-direction: column;
+  /* border: #000 1px solid; */
+  padding: 5px;
+}
+
+.detalleResumen{
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-between;
+  border-left: #000 1px solid;
+  padding: 2px 10px;
+}
+
+.detalleResumen div{
+  width: 50%;
+  text-align: center;
+  padding: 3px;
 }
