--- a/scss/_carrito.scss
+++ b/scss/_carrito.scss
@@ -1,117 +1,102 @@
 /* Carrito */
-body{
-    .bloque-carrito {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        background: transparent;
-        transition: all 0.3s linear;
-        background: rgba(240, 157, 80, 0.5);
-        z-index: 2;
-        visibility: hidden;
+body {
+  .bloque-carrito {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    transition: all 0.3s linear;
+    background: rgba(240, 157, 80, 0.5);
+    z-index: 2;
+    visibility: hidden;
 
-        
-
-        .carrito {
-            position: fixed;
-            top: 0;
-            right: 0;
-            width: 100%;
-            height: 100%;
-            overflow: scroll;
-            background: #fff;
-            z-index: 3;
-            background: rgb(231, 226, 221);
-            padding: 1.5rem;
-            transition: all 0.3s linear;
-            transform: translateX(100%);
-            .fin-carrito {
-                font-size: 1.7rem;
-                cursor: pointer;
-              }
-            h2 {
-                text-transform: capitalize;
-                text-align: center;
-                margin-bottom: 2rem;
-              }
-            .contenido-carrito{
-              .carrito-item {
-                display: grid;
-                align-items: center;
-                grid-template-columns: auto 1fr auto;
-                column-gap: 1.5rem;
-                margin: 1.5rem 0;
-                img {
-                  width: 75px;
-                  height: 75px;
-                }
-                h4 {
-                  font-size: 1rem;
-                  text-transform: capitalize;
-                }
-                
-                h5 {
-                  margin: 0.5rem 0;
-                  font-size: 0.95rem;
-                }
-                .remove-item {
-                  color: gray;
-                  cursor: pointer;
-                  &:hover {
-                    font-weight: bold;
-                    background: red;
-                    color: #000;
-                    padding: 3px;
-                    border-radius: 5px;
-                  }
-                }
-                .fa-chevron-up,
-                .fa-chevron-down {
-                  color: $navy;
-                  cursor: pointer;
-                }
-                .cant-item {
-                  text-align: center;
-                }
-              }
-            }
-            /* footer cart */
-            .carrito-footer {
-              margin-top: 2rem;
-              text-align: center;
-              h3 {
-                text-transform: capitalize;
-                margin-bottom: 1rem;
-              }
-              .footer-btn{
-                letter-spacing: 0.1rem;
-                font-size: 1rem;
-                padding: 1rem;
-                background-color: $navy;
-                border: 1px solid $navy;
-                color: $white;
-                transition: all 0.3s linear;
-                cursor: pointer;
-                &:hover {
-                  background: #AAA492;
-                }
-                a {
-                  text-decoration: none;
-                  color: $white;
-                }
-              }
-              .oculto {
-                display: none;
-              }
-            }
-          }  
-          .showCart {
-            transform: translateX(0);
+    .carrito {
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      overflow: scroll;
+      overflow-x: hidden;
+      background: #fff;
+      z-index: 3;
+      background: rgb(231, 226, 221);
+      padding: 1.5rem;
+      transition: all 0.3s linear;
+      transform: translateX(100%);
+      .fin-carrito {
+        font-size: 1.7rem;
+        cursor: pointer;
+      }
+      h2 {
+        font-size: $secundario;
+        font-family: $titSecundario;
+        text-align: center;
+        margin-bottom: 2rem;
+      }
+      .contenido-carrito {
+        .carrito-item {
+          display: grid;
+          align-items: center;
+          grid-template-columns: auto 1fr auto;
+          column-gap: 1.5rem;
+          margin: 1.5rem 0;
+          img {
+            width: 75px;
+            height: 75px;
+          }
+          h4 {
+            font-size: $textContenido - 0.25;
+            font-family: $contenido;
+            text-transform: capitalize;
+          }
+          h5 {
+            padding: 2px 0;
+            font-size: $textContenido - 0.25;
+          }
+          .remove-item {
+            @extend .remove;
+          }
+          .fa-chevron-up,
+          .fa-chevron-down {
+            @extend .flechas;
+          }
+          .fa-chevron-up:hover {
+            background: rgba(0, 128, 0, 0.3);
+          }
+          .fa-chevron-down:hover {
+            background: rgba(255, 0, 0, 0.3);
+          }
+          .cant-item {
+            text-align: center;
           }
         }
-        .transparenteBcg {
-          visibility: visible;
+      }
+      /* footer cart */
+      .carrito-footer {
+        margin-top: 2rem;
+        text-align: center;
+        h3 {
+          margin-bottom: 1rem;
+          font-family: $titSecundario;
+          font-size: $secundario - 0.3;
         }
+        .footer-btn {
+          padding: 1rem;
+          @extend .btn;
+        }
+        .oculto {
+          display: none;
+        }
+      }
     }
+    .showCart {
+      transform: translateX(0);
+    }
+  }
+  .transparenteBcg {
+    visibility: visible;
+  }
+}
