--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,15 +1,14 @@
 /* Card Productos */
 body {
-  height: 100vh;
   .productos {
-    padding: 4rem 0;
-    
+    padding: 3rem 0;
     .titulo-prod {
       h2 {
         text-align: center;
-        font-size: 2.5rem;
+        font-size: $principal;
+        font-family: $titulos;
         text-transform: capitalize;
-        letter-spacing: 0.1rem;
+        letter-spacing: 1rem;
       }
     }
     .card-prod {
@@ -18,22 +17,28 @@ body {
       max-width: 1170px;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-      column-gap: 1.5rem;
+      column-gap: 2rem;
       row-gap: 2rem;
       .prod {
-        margin: 10px 0;
         padding: 20px 0;
-        // border: 1px solid #000;
+        border: 1px solid #000;
+        border-radius: 10px;
+        box-shadow: 2px 4px 10px $black;
+        &:hover{
+          transform:scale(1.05);
+          transition: all 0.4s linear;
+        }
         .img-contenedor {
           position: relative;
           overflow: hidden;
-          height: 350px;
+          height: 300px;
           display: flex;
           align-items: center;
 
           .prod-img {
             display: block;
             width: 100%;
+            height: 100%;
             min-height: 12rem;
             transition: all 0.3s linear;
             padding: 10px;
@@ -51,11 +56,16 @@ body {
             border: none;
             padding: 0.5rem 0.75rem;
             font-weight: bold;
+            font-family: $titSecundario;
+            font-size: $textContenido - 0.4;
+            letter-spacing: 0.1rem;
             transition: all 0.3s linear;
             transform: translateX(101%);
             cursor: pointer;
             &:hover {
-              color: #fff;
+              border: solid 1px $navy;
+              background: $white;
+              color: $navy;
             }
             .fa-hand-holding-dollar {
               margin-right: 0.5rem;
@@ -65,24 +75,26 @@ body {
             transform: translateX(0);
           }
         }
-
-        h3 {
-          text-transform: capitalize;
-          font-size: 1.3rem;
-          margin-top: 1rem;
-          padding: 0 10px;
-          letter-spacing: 0.1rem;
-          text-align: center;
-          color: #125c13;
-        }
-
-        h4 {
-          margin-top: 0.7rem;
-          letter-spacing: 0.1rem;
-          text-align: center;
-          color: $black;
-          font-size: 1.2rem;
-          font-weight: bold;
+        .tit-contenedor {
+          h3 {
+            text-transform: capitalize;
+            font-size: $secundario - 0.5;
+            font-family: $contenido;
+            margin-top: 1rem;
+            padding: 10px;
+            letter-spacing: 0.1rem;
+            text-align: center;
+            color: #125c13;
+          }
+          h4 {
+            margin-top: 0.7rem;
+            letter-spacing: 0.1rem;
+            text-align: center;
+            color: $black;
+            font-size: $textContenido + 0.1;
+            font-family: $contenido;
+            font-weight: bold;
+          }
         }
       }
     }
