--- a/scss/_pagos.scss
+++ b/scss/_pagos.scss
@@ -30,6 +30,7 @@ body {
       flex-flow: row wrap;
       align-items: center;
       text-align: center;
+      width: 100%;
       .conjuntoProd {
         width: 100%;
         display: grid;
@@ -68,6 +69,10 @@ body {
           .remove-item {
             @extend .remove;
           }
+        }
+        h4{
+          font-size: $textContenido;
+          font-family: $contenido;
         }
       }
     }
