--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,12 +2,12 @@
 $navy: #1a1d36;
 $white: #fff;
 $black: #000;
-$orange: #FFAB4C;
+$orange: #ffab4c;
 
-// Fonts
-$titulos: 'Teko', sans-serif;
-$titSecundario: 'Nunito Sans', sans-serif;
-$contenido: 'Roboto', sans-serif;
+// Tipografía
+$titulos: "Teko", sans-serif;
+$titSecundario: "Nunito Sans", sans-serif;
+$contenido: "Roboto", sans-serif;
 
 // Tamaño
 $principal: 4rem;
@@ -15,7 +15,7 @@ $secundario: 2rem;
 $textContenido: 1.2rem;
 
 // Icon navbar
-.icon{
-   margin-right: 0.5rem;
-   font-size: $secundario;
+.icon {
+  margin-right: 0.5rem;
+  font-size: $secundario;
 }
