--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -20,11 +20,10 @@ body {
       row-gap: 2rem;
       .prod {
         padding: 20px 0;
-        border: 1px solid #000;
         border-radius: 10px;
         box-shadow: 2px 4px 10px $black;
-        &:hover{
-          transform:scale(1.05);
+        &:hover {
+          transform: scale(1.05);
           transition: all 0.4s linear;
         }
         .img-contenedor {
@@ -33,7 +32,6 @@ body {
           height: 300px;
           display: flex;
           align-items: center;
-
           .prod-img {
             display: block;
             width: 100%;
@@ -74,7 +72,15 @@ body {
           }
         }
         .tit-contenedor {
+          height: 130px;
+          display: flex;
+          flex-direction: column;
           h3 {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             text-transform: capitalize;
             font-size: $secundario - 0.5;
             font-family: $contenido;
@@ -85,6 +91,7 @@ body {
             color: #125c13;
           }
           h4 {
+            width: 100%;
             margin-top: 0.7rem;
             letter-spacing: 0.1rem;
             text-align: center;
