--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Roboto:wght@100;300&family=Teko:wght@600&display=swap');
-@import '_variables';
-@import '_fn';
-@import '_general';
-@import '_navbar';
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Roboto:wght@100;300&family=Teko:wght@600&display=swap");
+@import "_variables";
+@import "_fn";
+@import "_general";
+@import "_navbar";
 @import "scrollUp";
-@import '_inicio';
-@import '_productos';
-@import '_filtros';
-@import '_carrito';
-@import '_pagos';
-@import '_footer';
-@import '_mq';
+@import "_inicio";
+@import "_productos";
+@import "_filtros";
+@import "_carrito";
+@import "_pagos";
+@import "_footer";
+@import "_mq";
