--- a/scss/_carrito.scss
+++ b/scss/_carrito.scss
@@ -36,10 +36,15 @@ body {
         text-align: center;
         margin-bottom: 2rem;
       }
+      .carrito-vacio{
+        font-size: $secundario - 0.3;
+        font-family: $titSecundario;
+        text-align: center;
+      }
       .contenido-carrito {
         .carrito-vacio {
           font-size: $secundario;
-          font-family: $titSecundario;
+          font-family: $contenido;
           text-align: center;
         }
         .carrito-item {
